lib/grammar/schemalib-language.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(namespace, use, schema) { return {namespace, use,schema}; },
      peg$c1 = "namespace",
      peg$c2 = peg$literalExpectation("namespace", false),
      peg$c3 = function(nspace) {
              return {namespace: nspace, nodeType: "namespace"}; 
          },
      peg$c4 = "use",
      peg$c5 = peg$literalExpectation("use", false),
      peg$c6 = "version",
      peg$c7 = peg$literalExpectation("version", false),
      peg$c8 = function(name, vers) {return vers},
      peg$c9 = "as",
      peg$c10 = peg$literalExpectation("as", false),
      peg$c11 = function(name, version, as) {return as},
      peg$c12 = function(name, version, alias) {
              return {name, nodeType: "use",  version, alias };
          },
      peg$c13 = "type",
      peg$c14 = peg$literalExpectation("type", false),
      peg$c15 = "extends",
      peg$c16 = peg$literalExpectation("extends", false),
      peg$c17 = function(description, meta, name, keyw) {return keyw},
      peg$c18 = function(description, meta, name, extendType, properties) {
              return {name, meta, nodeType: "type",  extendType, description, properties};
          },
      peg$c19 = "enum",
      peg$c20 = peg$literalExpectation("enum", false),
      peg$c21 = function(description, meta, name, enums) {
              return {name, meta, nodeType: "enum", description, enums};
          },
      peg$c22 = "service",
      peg$c23 = peg$literalExpectation("service", false),
      peg$c24 = function(description, meta, name, extendType, elements) {
              return {name, meta, nodeType: "service", extendType, description, elements};
          },
      peg$c25 = "app",
      peg$c26 = peg$literalExpectation("app", false),
      peg$c27 = function(description, meta, name, extendType, elements) {
              return {name, meta, nodeType: "app", extendType, description, elements};
          },
      peg$c28 = function(description, accessType, name, request, response) {
              return {name, nodeType: "action", request, response, accessType, description};
          },
      peg$c29 = function(first, property) { return property; },
      peg$c30 = function(first, props) { 
              
              return [first, ...props]; 
          },
      peg$c31 = function(name, val, comment) {
            var returned  = {};
            returned["description"] = comment;
            returned["value"] = val;
            returned["name"] = name;
            return returned;
          },
      peg$c32 = function(property) { return property; },
      peg$c33 = function(props) { 

              return _arrayToObject(props);
          },
      peg$c34 = function(name, type, extType) {
            var returned  = {};
            extType['usingType'] = type;
            returned[name] = extType;
            return returned;
          },
      peg$c35 = function(name, type) {
            var returned  = {};
            returned[name] = type;
            return returned;
          },
      peg$c36 = function(accessType, name, type, comment) {
            var returned  = {};
            type["accessType"] = accessType;
            type["description"] = comment;
            returned[name] = type;
            return returned;
          },
      peg$c37 = "db",
      peg$c38 = peg$literalExpectation("db", false),
      peg$c39 = function(meta, elementType, name, type, comment) {
            var returned  = {};
            returned["elementType"] = elementType;
            returned["description"] = comment;
            returned["name"] = name;
            returned["meta"] = meta;
            returned['usingType'] = type;
            return returned;
          },
      peg$c40 = "[",
      peg$c41 = peg$literalExpectation("[", false),
      peg$c42 = "]",
      peg$c43 = peg$literalExpectation("]", false),
      peg$c44 = "!",
      peg$c45 = peg$literalExpectation("!", false),
      peg$c46 = function(type, required) { return { type, required, list: true }; },
      peg$c47 = function(type, required) { return { type, required, list: false}; },
      peg$c48 = function(properties, required) {
              
              return { required, list: false, type: "object" ,properties };
          },
      peg$c49 = peg$anyExpectation(),
      peg$c50 = function(end) {
              return {}
          },
      peg$c51 = function(props) { 

              return props;
          },
      peg$c52 = function(character) { return character; },
      peg$c53 = function(comment) { 
              return comment.join("").trim(); 
          },
      peg$c54 = "/*",
      peg$c55 = peg$literalExpectation("/*", false),
      peg$c56 = "*/",
      peg$c57 = peg$literalExpectation("*/", false),
      peg$c58 = function(comment) { 
              return comment.join("").replace(/\n\s*[*]?\s*/g, " ").replace(/\s+/, " ").trim(); 
          },
      peg$c59 = /^[A-Za-z0-9_]/,
      peg$c60 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
      peg$c61 = /^[A-Za-z0-9_.\/]/,
      peg$c62 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", ".", "/"], false, false),
      peg$c63 = /^[.+\-]/,
      peg$c64 = peg$classExpectation([".", "+", "-"], false, false),
      peg$c65 = /^[0-9]/,
      peg$c66 = peg$classExpectation([["0", "9"]], false, false),
      peg$c67 = /^[.]/,
      peg$c68 = peg$classExpectation(["."], false, false),
      peg$c69 = "\"",
      peg$c70 = peg$literalExpectation("\"", false),
      peg$c71 = function(characters) { return characters.join(""); },
      peg$c72 = "\\",
      peg$c73 = peg$literalExpectation("\\", false),
      peg$c74 = function() { return text(); },
      peg$c75 = "true",
      peg$c76 = peg$literalExpectation("true", false),
      peg$c77 = function() { return true },
      peg$c78 = "false",
      peg$c79 = peg$literalExpectation("false", false),
      peg$c80 = function() { return false },
      peg$c81 = function(value) { return Number(value.replace(/^[.]/, '0.')); },
      peg$c82 = peg$otherExpectation("string"),
      peg$c83 = function(chars) { return chars.join(""); },
      peg$c84 = "/",
      peg$c85 = peg$literalExpectation("/", false),
      peg$c86 = "b",
      peg$c87 = peg$literalExpectation("b", false),
      peg$c88 = function() { return "\b"; },
      peg$c89 = "f",
      peg$c90 = peg$literalExpectation("f", false),
      peg$c91 = function() { return "\f"; },
      peg$c92 = "n",
      peg$c93 = peg$literalExpectation("n", false),
      peg$c94 = function() { return "\n"; },
      peg$c95 = "r",
      peg$c96 = peg$literalExpectation("r", false),
      peg$c97 = function() { return "\r"; },
      peg$c98 = "t",
      peg$c99 = peg$literalExpectation("t", false),
      peg$c100 = function() { return "\t"; },
      peg$c101 = "u",
      peg$c102 = peg$literalExpectation("u", false),
      peg$c103 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c104 = function(sequence) { return sequence; },
      peg$c105 = "-",
      peg$c106 = peg$literalExpectation("-", false),
      peg$c107 = "+",
      peg$c108 = peg$literalExpectation("+", false),
      peg$c109 = "0",
      peg$c110 = peg$literalExpectation("0", false),
      peg$c111 = /^[^\0-\x1F"\\]/,
      peg$c112 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c113 = "#",
      peg$c114 = peg$literalExpectation("#", false),
      peg$c115 = "//",
      peg$c116 = peg$literalExpectation("//", false),
      peg$c117 = "{",
      peg$c118 = peg$literalExpectation("{", false),
      peg$c119 = "}",
      peg$c120 = peg$literalExpectation("}", false),
      peg$c121 = "(",
      peg$c122 = peg$literalExpectation("(", false),
      peg$c123 = ")",
      peg$c124 = peg$literalExpectation(")", false),
      peg$c125 = ":",
      peg$c126 = peg$literalExpectation(":", false),
      peg$c127 = "=",
      peg$c128 = peg$literalExpectation("=", false),
      peg$c129 = "@",
      peg$c130 = peg$literalExpectation("@", false),
      peg$c131 = ",",
      peg$c132 = peg$literalExpectation(",", false),
      peg$c133 = /^[ \t]/,
      peg$c134 = peg$classExpectation([" ", "\t"], false, false),
      peg$c135 = "\n",
      peg$c136 = peg$literalExpectation("\n", false),
      peg$c137 = "\r\n",
      peg$c138 = peg$literalExpectation("\r\n", false),
      peg$c139 = "\r",
      peg$c140 = peg$literalExpectation("\r", false),
      peg$c141 = "\u2028",
      peg$c142 = peg$literalExpectation("\u2028", false),
      peg$c143 = "\u2029",
      peg$c144 = peg$literalExpectation("\u2029", false),
      peg$c145 = /^[0-9a-f]/i,
      peg$c146 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseWS();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseWS();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNspace();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseWS();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseWS();
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseUse();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseUse();
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseWS();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseWS();
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseType();
              if (s7 === peg$FAILED) {
                s7 = peg$parseService();
                if (s7 === peg$FAILED) {
                  s7 = peg$parseEnum();
                  if (s7 === peg$FAILED) {
                    s7 = peg$parseApp();
                  }
                }
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseType();
                if (s7 === peg$FAILED) {
                  s7 = peg$parseService();
                  if (s7 === peg$FAILED) {
                    s7 = peg$parseEnum();
                    if (s7 === peg$FAILED) {
                      s7 = peg$parseApp();
                    }
                  }
                }
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseWS();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseWS();
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c0(s2, s4, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNspace() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 9) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 9;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNamespaceKeyword();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseUse() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNamespaceKeyword();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = peg$parseSPACE();
          if (s5 !== peg$FAILED) {
            if (input.substr(peg$currPos, 7) === peg$c6) {
              s6 = peg$c6;
              peg$currPos += 7;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseSPACE();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseVersionKeyword();
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s4;
                  s5 = peg$c8(s3, s8);
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = peg$parseSPACE();
            if (s6 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c9) {
                s7 = peg$c9;
                peg$currPos += 2;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$parseSPACE();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseKeyword();
                  if (s9 !== peg$FAILED) {
                    peg$savedPos = s5;
                    s6 = peg$c11(s3, s4, s9);
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWS();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c12(s3, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseType() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseComment();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseComment();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseMetaList();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseMetaList();
      }
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c13) {
          s3 = peg$c13;
          peg$currPos += 4;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSPACE();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseKeyword();
            if (s5 !== peg$FAILED) {
              s6 = peg$currPos;
              s7 = peg$parseSPACE();
              if (s7 !== peg$FAILED) {
                if (input.substr(peg$currPos, 7) === peg$c15) {
                  s8 = peg$c15;
                  peg$currPos += 7;
                } else {
                  s8 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c16); }
                }
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseSPACE();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseKeyword();
                    if (s10 !== peg$FAILED) {
                      peg$savedPos = s6;
                      s7 = peg$c17(s1, s2, s5, s10);
                      s6 = s7;
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseSPACE();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseBEGIN_BODY();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsePropertyList();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseCLOSE_BODY();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c18(s1, s2, s5, s6, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEnum() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
